fix: improve layout and styling for better user experience and readability

--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
 body {
   margin: 0;
+  height: 100%;
 }
 
 p {
@@ -26,7 +28,7 @@ p {
   max-width: 100%;
   margin: 0 auto;
   text-align: center;
-  min-height: 100svh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
